applications/volumes-web-app/upstream/components/gateway-api-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: volumes-web-app
  namespace: kubeflow
spec:
  parentRefs:
  - name: volumes-web-app-gateway-api
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /volumes/
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: volumes-web-app-service
      port: 80
